bugfix(table): 修复虚拟滚动下面fixed列位置偏移问题 (#2042)
* perf: 优化示例

* bugfix: 修复subtree读取逻辑

* doc: dropdown文档完善

* doc: dropdown文档完善

* doc: dropdown文档完善

* bugfix: table设置字段显示不生效问题

* bugfix: table设置字段显示不生效问题

* bugfix(table): 多表头导致拖拽列错位问题

* feat: scrollbar init

* feat: scrollbar键盘功能完善

* feat: 滚动条默认系统功能实现(键盘功能)

* feat(scrollbar): 支持键盘事件

* feat(scrollbar): 支持键盘事件

* feat: 增加scrollbar readme说明 & 部分示例调整

* feat: 调整rezise判定范围

* feat: 优化拖拽列 & 增加appendLastrow slot

* feat: 优化拖拽列 & 增加appendLastrow slot
# Reviewed, transaction id: 12653

* Merge branch 'staging' of https://github.com/TencentBlueKing/bkui-vue3 into feat/scrollbar-render
, # Reviewed, transaction id: 12654

* feat: 优化拖拽列 & 增加appendLastrow slot
# Reviewed, transaction id: 12675

* feat: 支持table body高度自适应
# Reviewed, transaction id: 12847

* feat(table): 增加大量数据分批渲染逻辑支持
# Reviewed, transaction id: 12908

* bugfix(table): 修复column width计算内存泄漏问题
# Reviewed, transaction id: 12953

* feat(table): 优化column resize方法
# Reviewed, transaction id: 12982

* Merge branch 'staging' of https://github.com/TencentBlueKing/bkui-vue3 into feat/scrollbar-render
, # Reviewed, transaction id: 12983

* fix(tree): 功能梳理&TS修复
# Reviewed, transaction id: 13052

* feat(table): 支持append-last-row实现统计功能
# Reviewed, transaction id: 13109

* bugfix: 修复colum template默认初始化问题

* bugfix(table): 修复虚拟滚动下面fixed列位置偏移问题

* bugfix(table): 修复虚拟滚动下面fixed列位置偏移问题
# Reviewed, transaction id: 13803

--- a/packages/table/src/table.less
+++ b/packages/table/src/table.less
@@ -506,6 +506,10 @@
     pointer-events: none;
     transform: translate(var(--translate-x), var(--translate-y));
 
+    &.has-virtual-scroll {
+      transform: translate(var(--translate-x), 0);
+    }
+
     .column_fixed_right {
       box-shadow: var(--shadow-right);
     }
